fix links in static page

--- a/public/about.html
+++ b/public/about.html
@@ -45,7 +45,7 @@
 <div class="container">
     <div class="box">
         TestGuru это веб-приложения для составления онлайн-тестов и прохождения их людми :) <br>
-        Данные проект создан в рамках прохождения курсов в онлайн школе <a href="www.thinknetica.com)">Thinknetica</a>
+        Данные проект создан в рамках прохождения курсов в онлайн школе <a href="https://thinknetica.com" target="_blank">Thinknetica</a>
         <br><br>
         <a href="/about/mark">Немного об авторе</a>
     </div>
