--- a/public/about/mark.html
+++ b/public/about/mark.html
@@ -46,7 +46,7 @@
     <div class="box">
         Привет. Меня зовут Марк.<br>
         Я из Ростова-на-Дону. <br>
-        В данный момент прохожу курс <strong>Профессиональная разработка Ruby On Rails в онлайн школе <a href="www.thinknetica.com)">Thinknetica</a></strong>
+        В данный момент прохожу курс <strong>Профессиональная разработка Ruby On Rails в онлайн школе <a href="https://thinknetica.com" target="_blank">Thinknetica</a></strong>
         <br><br>
         Данный проект будет включать в себя все знания, которые я получу на данному курсе.
         <br>
